--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "css-lint": "yarn run stylelint src/**/*.{css,scss,sass,less,stylus}",
+    "css-lint-fix": "yarn run stylelint src/**/*.{css,scss,sass,less,stylus} --fix"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -17,6 +19,7 @@
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "postcss-preset-env": "^8.3.0",
+    "stylelint": "^15.4.0",
     "vite": "^4.2.0"
   }
 }
