--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "react-css-light-dark",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "css-lint": "yarn run stylelint src/**/*.{css,scss,sass,less,stylus}",
-    "css-lint-fix": "yarn run stylelint src/**/*.{css,scss,sass,less,stylus} --fix"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^3.1.0",
-    "postcss-preset-env": "^8.3.0",
-    "stylelint": "^15.4.0",
-    "vite": "^4.2.0"
-  }
+	"name": "react-css-light-dark",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
+		"css-lint": "yarn run stylelint src/**/*.{css,scss,sass,less,stylus}",
+		"css-lint-fix": "yarn run stylelint src/**/*.{css,scss,sass,less,stylus} --fix",
+		"format": "prettier --write ."
+	},
+	"dependencies": {
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
+	},
+	"devDependencies": {
+		"@types/react": "^18.0.28",
+		"@types/react-dom": "^18.0.11",
+		"@vitejs/plugin-react": "^3.1.0",
+		"postcss-preset-env": "^8.3.0",
+		"prettier": "^2.8.7",
+		"stylelint": "^15.4.0",
+		"vite": "^4.2.0"
+	}
 }
