--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"postcss-preset-env": "^8.3.0",
 		"prettier": "^2.8.7",
 		"stylelint": "^15.4.0",
+		"stylelint-config-prettier": "^9.0.5",
 		"vite": "^4.2.0"
 	}
 }
