build: stylelint segunda parte faltante XD

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -8,5 +8,5 @@
 		],
 		"declaration-block-no-redundant-longhand-properties": null
 	},
-	"extends": ["stylelint-config-prettier"]
+	"extends": ["stylelint-config-standard-scss", "stylelint-config-prettier"]
 }
