--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"prettier": "^2.8.7",
 		"stylelint": "^15.4.0",
 		"stylelint-config-prettier": "^9.0.5",
+		"stylelint-config-standard-scss": "^7.0.1",
 		"vite": "^4.2.0"
 	}
 }
