--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@vitejs/plugin-react": "^3.1.0",
 		"postcss-preset-env": "^8.3.0",
 		"prettier": "^2.8.7",
+		"prop-types": "^15.8.1",
 		"stylelint": "^15.4.0",
 		"stylelint-config-prettier": "^9.0.5",
 		"stylelint-config-standard-scss": "^7.0.1",
