build: add pack stylelint-no-px

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,4 +1,6 @@
 {
+	"extends": ["stylelint-config-standard-scss", "stylelint-config-prettier"],
+	"plugins": ["stylelint-no-px"],
 	"rules": {
 		"selector-class-pattern": [
 			"^([a-z])(([A-Z]*)[a-z0-9]+)*(((__[a-z])(([A-Z]*)[a-z])+)){0,1}(((_[a-z])(([A-Z]*)[a-z])+){0,1})$",
@@ -6,7 +8,7 @@
 				"message": "Expected class selector to be camelCase + snake__case (double underscore), example:  myBlock__myElement_myModifier"
 			}
 		],
-		"declaration-block-no-redundant-longhand-properties": null
-	},
-	"extends": ["stylelint-config-standard-scss", "stylelint-config-prettier"]
+		"declaration-block-no-redundant-longhand-properties": null,
+		"meowtec/no-px": [true, { "ignore": ["1px"] }]
+	}
 }
