--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"stylelint": "^15.4.0",
 		"stylelint-config-prettier": "^9.0.5",
 		"stylelint-config-standard-scss": "^7.0.1",
+		"stylelint-no-px": "^1.0.1",
 		"vite": "^4.2.0"
 	}
 }
